--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,17 @@
     background-color: rgb(16, 16, 51);
     color:rgb(250, 217, 28);
 }
+body{
+    width:100%;
+    height:100vh;
+}
 style, title{
     display: none;
 }
 main{
+    display:flex;
+    justify-content:center;
+    align-items:center;
     margin-top: 14px;
     max-width: 300px;
     padding: 10px;
